Improvement: Improve wrapping of the outside-left and outside-right regions, resolves #255

--- a/scss/boost_union/post.scss
+++ b/scss/boost_union/post.scss
@@ -1157,6 +1157,29 @@ body.theme-boost-union-commincourse {
     }
 }
 
+/* And on larger screens and below. */
+@include media-breakpoint-down(md) {
+    /* Wrap the left and right outside regions below the main content. */
+    body.limitedwidth {
+        .left-region-nextmaincontent {
+            &.main-inner-outside-left-right.main-inner-outside-nextmaincontent,
+            &.main-inner-outside-left.main-inner-outside-nextmaincontent,
+            &.main-inner-outside-right.main-inner-outside-nextmaincontent,
+            &.main-inner-outside-left-right.main-inner-outside-nearwindowedges,
+            &.main-inner-outside-left.main-inner-outside-nearwindowedges,
+            &.main-inner-outside-right.main-inner-outside-nearwindowedges {
+                display: grid;
+                #theme-block-region-outside-left {
+                    order: 1;
+                }
+                #theme-block-region-outside-right {
+                    order: 2;
+                }
+            }
+        }
+    }
+}
+
 /* And on smaller screens. */
 @include media-breakpoint-down(sm) {
     /* Change the outside-left and outside-right blocks to full width (with some horizontal space). */
